blocks/modal.css
.modal {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: 999;
    visibility: hidden;
    display: flex;
    opacity: 0;
    transition: visibility 0s linear 0.3s, opacity .3s ease;
    background-color: rgba(0, 0, 0, .5);
}

.modal_opened {
    visibility: visible;
    opacity: 1;
    transition-delay: 0s;
}

.modal__close {
    background-image: url(../images/Close\ Icon.svg);
    border: none;
    background-color: transparent;
    background-repeat: no-repeat;
    background-size: contain;
    width: 40px;
    height: 40px;
    position: absolute;
    top: -45px;
    right: -45px;
    cursor: pointer;
}

.modal__close:hover {
    opacity: 0.6;
}

.modal__close-image {
    top: -15px;
    right: -15px;
}

.modal__close-image:hover {
    opacity: 0.6;
}

.modal__container {
    position: relative;
    padding: 36px;
    background-color: white;
    margin: auto;
    border-radius: 10px;
    width: 358px;
}

.modal__container-image {
    position: relative;
    padding: 36px;
    margin: auto;
    border-radius: 10px;
}

.modal__heading {
    font-family: "Inter", Arial, sans-serif;
    font-weight: 900;
    font-size: 24px;
    line-height: 29.05px;
    margin: 0;
}

.modal__form {
    display: flex;
    flex-direction: column;
    padding-top: 54px;
    font-family: "Inter", Arial, sans-serif;
    font-weight: 400;
    font-size: 14px;
    line-height: 16.94px;
}

.modal__form-input {
    border-width: 1px;
    border-top: none;
    border-right: none;
    border-left: none;
    width: 100%;
    max-height: 28px;
    padding-bottom: 13px;
    border-color: #C4C4C4;
}

.modal__form-input::placeholder{
    color: #C4C4C4;
}


.modal__form-input:nth-of-type(2n) {
    padding-top: 30px;
}

.modal__input-error {
    color: #FF0000;
    visibility: hidden;
    opacity: 0;
    font-family: 'Inter', Arial, sans-serif;
    font-weight: 400;
    font-size: 12px;
    transition: visibility 0s linear 0.3s, opacity .3s ease;
}

.modal__input-error_active {
    visibility: visible;
    opacity: 1;
    transition-delay: 0s;
}

.modal__input_type_error {
    border-bottom: 1px solid #FF0000;
}

.modal__button {
    background-color: black;
    color: #fff;
    font-family: "Inter", Arial, sans-serif;
    font-size: 18px;
    font-weight: 400;
    line-height: 21.78px;
    text-align: center;
    width: 100%;
    height: 50px;
    align-self: center;
    margin-top: 48px;
    cursor: pointer;
}

.modal__button_disabled {
    background: url(../images/Submit\ Button\ Invalid.svg);
    cursor: not-allowed;
}

.modal__button:hover {
    opacity: 0.6;
}

.modal__image {
    max-width: 75vw;
    max-height: 75vh;
}

.modal__description {
    font-family: 'Inter', Arial, sans-serif;
    font-weight: 400;
    font-size: 12px;
    line-height: 14.52px;
    color: #fff;
}

.modal__description {
    cursor:pointer;
}


@media screen and (max-width: 527px) {
    .modal__close {
        width: 26px;
        height: 26px;
        top: -55px;
        right: 0;
    }

    .modal__heading {
        font-size: 18px;
    }

    .modal__container {
        padding: 25px 22px;
    }
}

@media screen and (max-width: 404px) {
    #edit{
        padding-left: 19px;
        padding-right: 19px; /**/
    }

    #add {
        padding-left: 19px;
        padding-right: 19px;
    }

    .modal__container {
        width: 100%;
    }

    .modal__form-input {
        width: 100%; /**/
        height: 27px;
        padding-bottom: 9px;
    }

    .modal__button {
        width: 100%; /**/
        height: 46px;
        font-size: 14px;
        margin: 16px 0 0 0; /*46px gap from the form to the button*/
    }
}

